--- a/client/src/assets/base.css
+++ b/client/src/assets/base.css
@@ -61,19 +61,19 @@
 
 body {
 	min-height: 100vh;
-	color: var(--color-text);
-	background: var(--color-background);
-	transition: color 0.5s, background-color 0.5s;
-	line-height: 1.6;
+	/* color: var(--color-text); */
+	/* background: var(--color-background); */
+	/* transition: color 0.5s, background-color 0.5s; */
+	/* line-height: 1.6; */
 	font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
-	font-size: 15px;
+	font-size: 16px;
+	/* color: black; */
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
-a {
+/* a {
 	text-decoration: none;
-	color: inherit;
-}
+} */
